--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Node.js CI
 on:
   push:
     branches:
-      - master  # Nome do branch que deve disparar o pipeline
+      - master
   pull_request:
     branches:
       - master
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'  # ou a versão do Node.js que você está utilizando
+        node-version: '14'
 
     - name: Install dependencies
       run: npm install
@@ -35,4 +35,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: jest-results
-        path: ./test-results  # Ajuste para o local onde os resultados dos testes são armazenados
+        path: ./test-results
