--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Configurações do Banco de Dados
 DB_HOST=localhost                   # Endereço do servidor do PostgreSQL
 DB_USER=ascendboost                 # Nome de usuário do PostgreSQL
-DB_PASSWORD=Gogo22!Sonho            # Senha do PostgreSQL
+DB_PASSWORD=aaaaa            # Senha do PostgreSQL
 DB_NAME=ascendboostdb               # Nome do banco de dados
 DB_DIALECT=postgres                 # Dialeto do banco de dados (PostgreSQL)
 
